--- a/group.html
+++ b/group.html
@@ -303,7 +303,7 @@
 
             for (let i = 0; i < groups.length; i++) {
                 var item = document.createElement('tr');
-                item.innerHTML = `<th>${i + 1}(${groups[i].length})</th><th>${groups[i].join('、')}</th>`;
+                item.innerHTML = `<th>${i + 1}</th><th>${groups[i].join('、')}</th>`;
                 tbody.appendChild(item);
             }
         })
