--- a/group.html
+++ b/group.html
@@ -262,7 +262,7 @@
         var tbody = document.createElement('tbody');
 
         var theadRow = document.createElement('tr');
-        theadRow.innerHTML = '<th scope="col">組別</th><th scope="col">座號</th>';
+        theadRow.innerHTML = '<th scope="col">組別</th><th scope="col">人數</th><th scope="col">座號</th>';
         thead.appendChild(theadRow);
         list.appendChild(thead);
         list.appendChild(tbody);
@@ -303,7 +303,7 @@
 
             for (let i = 0; i < groups.length; i++) {
                 var item = document.createElement('tr');
-                item.innerHTML = `<th>${i + 1}</th><th>${groups[i].join('、')}</th>`;
+                item.innerHTML = `<th>${i + 1}</th><th>${groups[i].length}</th><th>${groups[i].join('、')}</th>`;
                 tbody.appendChild(item);
             }
         })
