--- a/group.html
+++ b/group.html
@@ -45,14 +45,17 @@
             position: sticky;
             top: 0;
             margin-bottom: auto;
+            align-items: center;
         }
 
-        .input {
+        .input:not([type="checkbox"]) {
             border: none;
             outline: none;
-            background: rgba(0, 0, 0, .05);
+            background: #fff;
+            box-shadow: rgba(0, 0, 0, .1) 0px 0px 0px 1px;
             padding: .75rem 1rem;
             border-radius: .375rem;
+            font-size: 1rem;
         }
 
         .input-group {
@@ -60,6 +63,7 @@
             display: flex;
             flex-direction: column;
             gap: .25rem;
+            width: -webkit-fill-available;
         }
 
         .app-content {
@@ -67,7 +71,6 @@
             display: flex;
             flex-direction: row;
             gap: 3rem;
-            padding-bottom: 2rem;
         }
 
         .app-result {
@@ -75,10 +78,13 @@
             border-radius: .5rem;
             border: 1.5px solid rgba(0, 0, 0, .1);
             height: fit-content;
+            margin-bottom: 2rem;
         }
 
         label {
             width: -webkit-fill-available;
+            font-size: 1rem;
+            padding: .25rem 0;
         }
 
         table {
@@ -110,6 +116,15 @@
             border-left: 1.5px solid rgba(0, 0, 0, .1);
         }
 
+        a {
+            outline: none;
+            cursor: default;
+        }
+
+        .input {
+            outline: none;
+        }
+
         .input:not([type="checkbox"]) {
             width: min(30vw, 18rem);
         }
@@ -118,11 +133,13 @@
             background: #000000;
             color: #fff;
             border-radius: .5rem;
-            padding: .5rem 1rem;
-            font-size: .935rem;
+            padding: .625rem 1rem;
+            font-size: 1rem;
             cursor: pointer;
             user-select: none;
             -webkit-user-select: none;
+            border: none;
+            outline: none;
         }
 
         .app-footer {
@@ -148,10 +165,76 @@
 
         .app-container * {
             transition: all .1s ease-in-out;
+            box-sizing: border-box;
         }
 
         .input-group.inline {
             flex-direction: row;
+        }
+
+        .hint {
+            max-height: 0;
+            overflow: hidden;
+            transition: all .1s ease-in-out;
+            font-size: .825rem;
+            user-select: none;
+            -webkit-user-select: none;
+            height: 100%;
+        }
+
+        .ad {
+            margin: 3rem 0 0;
+            background: rgb(255, 255, 255);
+            /* box-shadow: rgba(0, 0, 0, 0.2) 0px 0px 16px; */
+            border-radius: 0.75rem;
+            display: flex;
+            flex-direction: column;
+            height: fit-content;
+            overflow: hidden;
+            width: min(30vw, 18rem);
+            border: rgba(0, 0, 0, .1) solid 1.5px;
+            position: relative;
+            color: #000;
+            text-decoration: none;
+            cursor: pointer;
+        }
+
+        .ad::before {
+            content: 'AD';
+            position: absolute;
+            right: .5rem;
+            top: .5rem;
+            background: rgb(255, 255, 255);
+            border: 1.5px solid rgba(0, 0, 0, .1);
+            border-radius: .375rem;
+            font-size: .75rem;
+            padding: .125rem .5rem;
+        }
+
+        .ad-image {
+            background: rgba(0, 0, 0, .1);
+            background-image: url("https://winbows11.vercel.app/banner.png");
+            width: -webkit-fill-available;
+            height: 8rem;
+            background-size: cover;
+            background-position: center;
+            background-repeat: no-repeat;
+        }
+
+        .ad-info {
+            padding: 1.5rem 2rem;
+            width: 100%;
+            overflow: hidden;
+        }
+
+        .ad-title {
+            font-size: 1.25rem;
+            font-weight: 600;
+            margin-bottom: .5rem;
+        }
+
+        .ad-description {
+            font-size: .875rem;
         }
 
         @media screen and (max-width: 926px) {
@@ -166,11 +249,30 @@
             .app-settings {
                 position: relative;
             }
+
+            .ad {
+                flex-direction: row;
+                width: -webkit-fill-available;
+            }
+
+            .ad-image {
+                height: auto;
+                min-width: 15rem;
+            }
         }
 
         @media screen and (max-width: 768px) {
             .app-container {
                 padding: 3rem 3rem 0;
+            }
+
+            .ad {
+                flex-direction: column;
+                width: -webkit-fill-available;
+            }
+
+            .ad-image {
+                display: none;
             }
         }
 
@@ -178,22 +280,40 @@
             background: rgb(211 227 253);
             color: unset;
         }
+
+        .error .input {
+            box-shadow: rgb(220, 53, 69) 0px 0px 0px 1px;
+            color: rgb(220, 53, 69);
+        }
+
+        .error .hint {
+            max-height: fit-content;
+            padding: .25rem 0;
+            color: rgb(220, 53, 69);
+        }
+
+        .button:disabled {
+            background: #555;
+            cursor: default;
+        }
     </style>
 </head>
 
 <body>
     <div class="app">
         <div class="app-container">
-            <div class="app-header">分組程式</div>
+            <div class="app-header">分組工具</div>
             <div class="app-content">
                 <div class="app-settings">
-                    <div class="input-group number">
+                    <div class="input-group number" id="count-group">
                         <label for="count">人數</label>
                         <input class="input" type="number" id="count" name="count" value="36">
+                        <span class="hint">人數必須大於零</span>
                     </div>
-                    <div class="input-group number">
+                    <div class="input-group number" id="unit-group">
                         <label for="unit">每組人數</label>
                         <input class="input" type="number" id="unit" name="unit" value="3">
+                        <span class="hint">每組人數必須大於等於人數</span>
                     </div>
                     <div class="input-group inline">
                         <input class="input" type="checkbox" id="autoAssign" name="autoAssign">
@@ -202,6 +322,13 @@
                     <div class="input-group">
                         <button class="button" id="action">分組</button>
                     </div>
+                    <a class="ad" href="https://winbows11.vercel.app" target="_blank">
+                        <div class="ad-image"></div>
+                        <div class="ad-info">
+                            <div class="ad-title">Winbows11</div>
+                            <div class="ad-description">Just like Windows11, Winbows11 lets you experience Windows11 UI and animations on your web browser!</div>
+                        </div>
+                    </a>
                 </div>
                 <div class="app-result" id="result">
 
@@ -218,25 +345,45 @@
     <script>
         const count = document.getElementById("count");
         const unit = document.getElementById("unit");
+        const countGroup = document.getElementById("count-group");
+        const unitGroup = document.getElementById("unit-group");
         const autoAssign = document.getElementById("autoAssign");
         const button = document.getElementById('action');
         const result = document.getElementById('result');
 
-        count.addEventListener('input', (e) => {
+        function setUnitClassName() {
+            if (Number(unit.value) < 1 || Number(unit.value) > Number(count.value)) {
+                unitGroup.classList.add('error')
+            } else {
+                unitGroup.classList.remove('error')
+            }
+        }
+
+        function setCountClassName() {
             if (Number(count.value) < 1) {
-                count.value = 1;
+                countGroup.classList.add('error')
+            } else {
+                countGroup.classList.remove('error')
             }
-            if (Number(unit.value) > Number(count.value)) {
-                unit.value = count.value;
-            }
+        }
+
+        function updateButtonStatus() {
+            button.disabled = !isvalid();
+        }
+
+        function isvalid() {
+            return !(Number(count.value) < 1) && !(Number(unit.value) < 1 || Number(unit.value) > Number(count.value));
+        }
+
+        count.addEventListener('input', (e) => {
+            setCountClassName();
+            setUnitClassName();
+            updateButtonStatus();
         })
 
         unit.addEventListener('input', (e) => {
-            if (Number(unit.value) > Number(count.value)) {
-                unit.value = count.value;
-            } else if (Number(unit.value) < 1) {
-                unit.value = 1;
-            }
+            setUnitClassName();
+            updateButtonStatus();
         })
 
         function getAssignment(count, unit) {
@@ -269,6 +416,12 @@
         result.appendChild(list);
 
         button.addEventListener('click', () => {
+            if (!isvalid()) {
+                setCountClassName();
+                setUnitClassName();
+                updateButtonStatus();
+                return;
+            }
             tbody.innerHTML = '';
             const countValue = Number(count.value);
             const unitValue = Number(unit.value);
