--- a/group.html
+++ b/group.html
@@ -313,7 +313,7 @@
                     <div class="input-group number" id="unit-group">
                         <label for="unit">每組人數</label>
                         <input class="input" type="number" id="unit" name="unit" value="3">
-                        <span class="hint">每組人數必須大於等於人數</span>
+                        <span class="hint">每組人數必須小於等於人數</span>
                     </div>
                     <div class="input-group inline">
                         <input class="input" type="checkbox" id="autoAssign" name="autoAssign">
